--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
+baseURL: https://asu1tty.github.io/
 languageCode: en-us
 title: My New Hugo Site
 theme: ["PaperMod"]
