--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -221,7 +221,7 @@ code_block:
   # true means expand all code blocks by default
   # false means collapse all code blocks by default
   # number means collapse the code block by default when the number of lines exceeds the specified value
-  expand: true
+  expand: 99
 
 math:
   katex:
